fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  overflow-x: hidden !important;
 }
 
 * {
@@ -24,3 +25,4 @@ a {
 p {
   margin: 0;
 }
+
